--- a/src/app/container/todo-list-container/todo-list-container.component.html
+++ b/src/app/container/todo-list-container/todo-list-container.component.html
@@ -1,5 +1,5 @@
 <swda-todo-list
-  [todoItems]="todoItems | async"
+  [todoItems]="todoItems"
   (onMarkAsDone)="markAsDone($event)"
   (onShowDetails)="showDetails($event)">
 </swda-todo-list>
