Reduced to lab 5 final code

--- a/src/app/container/todo-list-container/todo-list-container.component.html
+++ b/src/app/container/todo-list-container/todo-list-container.component.html
@@ -1,5 +1,4 @@
 <swda-todo-list
   [todoItems]="todoItems"
-  (onMarkAsDone)="markAsDone($event)"
-  (onShowDetails)="showDetails($event)">
+  (onMarkAsDone)="markAsDone($event)">
 </swda-todo-list>
