--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <header class="header">
   <div class="header-container">
-    <h1 [routerLink]="['/todos']"
-        tabindex="0"
+    <h1 tabindex="0"
         class="title">Todo List</h1>
   </div>
 </header>
 <main class="main">
   <div class="main-container">
-    <!-- TODO: Remove direct reference to container and add <router-outlet> here -->
     <swda-todo-list-container></swda-todo-list-container>
   </div>
 </main>
