--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,6 +1,5 @@
 <swda-todo-item
   *ngFor="let todoItem of todoItems"
   [todoItem]="todoItem"
-  (onMarkAsDone)="markAsDone(todoItem)"
-  (onShowDetails)="showDetails(todoItem)">
+  (onMarkAsDone)="markAsDone(todoItem)">
 </swda-todo-item>
