Reduced to lab 5 exercise code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 </header>
 <main class="main">
   <div class="main-container">
-    <swda-todo-list-container></swda-todo-list-container>
+    <!-- TODO: Render our TodoListContainer component instead -->
+    <swda-todo-list></swda-todo-list>
   </div>
 </main>
