--- a/src/app/container/todo-list-container/todo-list-container.component.html
+++ b/src/app/container/todo-list-container/todo-list-container.component.html
@@ -1,4 +1,2 @@
-<swda-todo-list
-  [todoItems]="todoItems"
-  (onMarkAsDone)="markAsDone($event)">
-</swda-todo-list>
+<!-- TODO: Render TodoList component <swda-todo-list> and
+     connect all necessary input and output -->
