Reduced to lab 4 final

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 </header>
 <main class="main">
   <div class="main-container">
-    <swda-todo-list-container></swda-todo-list-container>
+    <swda-todo-list></swda-todo-list>
   </div>
 </main>
