--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
 <div [class.checkbox-done]="todoItem.done"
-     (click)="markAsDone(); $event.stopPropagation()"
+     (click)="markAsDone()"
      (keydown.enter)="markAsDone()"
      class="checkbox"
      tabindex="0"></div>
